Add_Splash_Screen

--- a/NewsViews/app/src/main/AndroidManifest.xml
+++ b/NewsViews/app/src/main/AndroidManifest.xml
@@ -7,23 +7,27 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label=""
+        android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-
-        <activity android:name=".ui.main.MainActivity"
+        <activity
+            android:name=".ui.main.MainActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        </activity>
+        <activity
+            android:name=".ui.search.SearchResultsActivity"
+            android:launchMode="singleTop">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.tausif.newsviews.ui.main.MainActivity" />
+        </activity>
+        <activity android:name=".ui.introduction.IntroductionActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <activity android:name="com.example.tausif.newsviews.ui.search.SearchResultsActivity"
-            android:launchMode="singleTop" >
-
         </activity>
     </application>
 
