Add_Tap_On_Card

--- a/NewsViews/app/src/main/AndroidManifest.xml
+++ b/NewsViews/app/src/main/AndroidManifest.xml
@@ -13,8 +13,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".ui.main.MainActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        </activity>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
         <activity
             android:name=".ui.search.SearchResultsActivity"
             android:launchMode="singleTop">
@@ -29,6 +28,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.webview.WebViewActivity"></activity>
     </application>
 
 </manifest>
