Add_Google_Sign_In

--- a/NewsViews/app/src/main/AndroidManifest.xml
+++ b/NewsViews/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".ui.main.MainActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity
             android:name=".ui.search.SearchResultsActivity"
             android:launchMode="singleTop">
@@ -28,7 +28,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.webview.WebViewActivity"></activity>
+        <activity android:name=".ui.webview.WebViewActivity" />
     </application>
 
 </manifest>
