--- a/NewsViews/app/build.gradle
+++ b/NewsViews/app/build.gradle
@@ -53,6 +53,10 @@ dependencies {
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
+    //google sign in
+    implementation 'com.google.android.gms:play-services-auth:15.0.1'
+
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
