--- a/NewsViews/app/build.gradle
+++ b/NewsViews/app/build.gradle
@@ -31,21 +31,16 @@ dependencies {
     implementation 'com.android.support:support-media-compat:28.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
 
-
     //retrofit/okkhttp
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
 
-    //RxJava2
+    //RxJava
 
     implementation 'io.reactivex:rxjava:1.0.+'
     implementation 'io.reactivex:rxandroid:0.23.+'
 
-    //Retrofit
-//    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
-//    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
-//    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.+'
 
     implementation 'com.squareup.retrofit:retrofit:1.9.+'
 
